@@ -222,9 +222,11 @@ struct asf_priv {
     unsigned packetsize;
     double   packetrate;
     unsigned movielength;
+    double avg_vid_frame_time;
     int asf_is_dvr_ms;
     uint32_t asf_frame_state;
     int asf_frame_start_found;
+    double dvr_last_vid_pts;
 };
 
 #endif
